@@ -14,3 +14,5 @@ build/
 CMakeCache.txt
 CMakeFiles/
 Makefile
+cmake_install.cmake
+install_manifest.txt
